# nasa-orrery-submission

./: README.md
backend/: app.py  data_fetcher.py  requirements.txt
backend_old/: app.py  data_fetcher.py
client/: README.md  index.html  openapitools.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: index.css  main.tsx  router.tsx
client/src/components/home-page/: explosion.tsx  neos.tsx  orbit.tsx  planet.tsx  planets.tsx  scene.tsx  stars.tsx  sun.tsx
client/src/components/home-page/controls/: control-panel.tsx
client/src/context/: camera.tsx  explosions.tsx  trails.tsx
client/src/lib/: api.ts  constants.ts
client/src/lib/hooks/: use-gravity.ts
client/src/lib/queries/: useGetPlanetPositions.ts
client/src/pages/: home-page.tsx
client/src/shaders/: noise.glsl
client/src/utils/: linear-velocity.ts  planetCalculations.ts
schema/: openapi.json
server/: .dockerignore  .env.example  .gitignore  pyproject.toml
server/app/: __init__.py  logger.py  settings.py
server/app/core/: constants.py  openapi.py  schemas.py
server/app/planets/: routes.py  services.py
server/scripts/: generate_schema.py  run_server.py
